--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GithubVn</title>
 </head>
 <body>
-    <h1>HelloWorld</h1>
+    <h1>Hello World</h1>
+    <h1>Commit lần 2</h1>
 </body>
 </html>
