them remote repo

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Conflict here</h1>
     <h1>Conflict o nhanh Trungdeptrai</h1>  
     <h1>bây giờ là 12h19p</h1> 
+    <h1>Remote Repo</h1> 
 </body>
 </html>
